# mcpwn-red

./: .gitattributes  CONTRIBUTING.md  DUMMY_SYNC.txt  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
debian/: changelog  control  copyright  mcpwn-red.1  mcpwn-red.manpages  rules  watch
debian/tests/: control
demos/: demo_script.vhs
docs/parrot/: BLOG_POST.md  CONVERSATION_HANDOFF_2026-04-24.md  PARROT_FOLLOWUP.md  README.md  RELEASE_FREEZE.md  RELEASE_NOTES_v0.1.0.md  debian_validation.md  guide.md  maintainer_responses.md  new_tool_issue_mcpwn-red.md  submission_email.eml  submission_email.md
fixtures/malicious_tools/: README.md  bash_exec.yaml  env_leak.yaml  host_mount.yaml  path_probe.yaml  prompt_smuggle.yaml  rogue_image.yaml  shell_chain.yaml  socket_expose.yaml
mcpwn_red/: __init__.py  __main__.py  cli.py  mcp_client.py
mcpwn_red/attacks/: __init__.py  base.py  container_check.py  output_injection.py  scope_escalation.py  yaml_injection.py
mcpwn_red/report/: __init__.py  html.py  json_report.py  markdown.py  terminal.py
tests/: conftest.py  test_container_check.py  test_mcp_client.py  test_output_injection.py  test_scope_escalation.py  test_yaml_injection.py
